--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "budo index.js --live -- -t brfs -t babelify",
+    "watch": "budo index.js --live -- -t babelify -t brfs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
