--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.78.0"
+    "bit-interleave": "^1.0.0",
+    "ibtree": "^0.1.2",
+    "three": "^0.78.0",
+    "yaot": "^1.1.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
